--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="./如何维护Symbol.js"></script>
+    <!-- <script src="./如何维护Symbol.js"></script> -->
     <script>
         /**
          * 问题背景？
@@ -20,16 +20,6 @@
          * 
          * 如何维护Symbol？
          */
-        // let obj = {}
-        // obj[Symbol()] = '张三'
-        // obj[Symbol()] = '李四'
-        // let a = Reflect.ownKeys(obj)
-        // console.log(obj);
-        // console.log(a);
-        // for (let value of a) {
-        //     console.log(obj[value]);
-
-        // }
     </script>
 </body>
 
