--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- <script src="./如何维护Symbol.js"></script> -->
+    <script src="./如何维护Symbol.js"></script>
     <script>
         /**
          * 问题背景？
